Capstone week 1, version 2

--- a/Capstone_Project_Test_week_1.ipynb
+++ b/Capstone_Project_Test_week_1.ipynb
@@ -64,10 +64,14 @@
         "- Step 3:\n",
         "Do an exploratory analysis on all data\n",
         "- Step 4:\n",
-        "Calcule the **KPI** 'Diversity & Rating of Venues per Neighborhood'.\n",
-        "> (count of unique category of venues per neighborhood X average rating of the same category of venue)\n",
+        "Cluster the neighborhood based on the category of venues\n",
         "- Step 5:\n",
-        "Plot on map the 5 highest neighborhood by the KPI"
+        "Analyse and define which cluster has the best fit with your personality\n",
+        "- Step 6:\n",
+        "For all neighborhoods inside the choosen cluster, calcule the **KPI** 'Diversity & Rating of Venues per Neighborhood'.\n",
+        "> (count the categories of venues per neighborhood X average rating of the same categoris of venues)\n",
+        "- Step 5:\n",
+        "Plot on map the 3 highest neighborhoods classified by the KPI"
       ]
     },
     {
